--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
---index-url https://download.pytorch.org/whl/cpu
 flask
 numpy
 joblib
@@ -6,7 +5,6 @@ scikit-learn
 gunicorn
 pandas
 chardet
-transformers 
-torch 
-torchvision 
-torchaudio
+transformers
+--index-url https://download.pytorch.org/whl/cpu 
+torch torchvision torchaudio
