--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ pandas
 chardet
 transformers
 --index-url https://download.pytorch.org/whl/cpu 
-torch torchvision torchaudio
+torch 
+torchvision 
+torchaudio
